visual improvements -links

--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
   </div>
 
   <script src="script.js"></script>
+
+    <footer class="social-footer">
+    <a href="https://github.com/umer-exe" target="_blank" class="social-btn github-btn">GitHub</a>
+    <a href="https://linkedin.com/in/umer-malik28" target="_blank" class="social-btn linkedin-btn">LinkedIn</a>
+  </footer>
+
 </body>
 </html>
