--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
     <!-- theme toggle -->
     <div class="theme-toggle">
       <input type="checkbox" id="themeSwitch" />
-      <label for="themeSwitch" class="switch" title="Toggle dark mode"></label>
+      <label for="themeSwitch" class="switch"><i aria-hidden="true"></i></label>
     </div>
+
 
     <h1>Stopwatch</h1>
 
