--- a/index.html
+++ b/index.html
@@ -11,7 +11,20 @@
     <!-- theme toggle -->
     <div class="theme-toggle">
       <input type="checkbox" id="themeSwitch" />
-      <label for="themeSwitch" class="switch"><i aria-hidden="true"></i></label>
+      <!-- Modern icon switch (SVGs) -->
+      <label for="themeSwitch" class="switch">
+        <!-- Sun icon -->
+        <svg class="icon sun" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12Z"/>
+          <path d="M12 1v3M12 20v3M4.22 4.22l2.12 2.12M17.66 17.66l2.12 2.12M1 12h3M20 12h3M4.22 19.78l2.12-2.12M17.66 6.34l2.12-2.12"/>
+        </svg>
+        <!-- Moon icon -->
+        <svg class="icon moon" viewBox="0 0 24 24" aria-hidden="true">
+          <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79Z"/>
+        </svg>
+        <!-- Knob -->
+        <i aria-hidden="true"></i>
+      </label>
     </div>
 
     <h1>Stopwatch</h1>
